fix scrollbar

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -12,6 +12,7 @@ input:focus {
   outline: none;
 }
 
+
 html,
 body {
   padding: 0;
@@ -21,6 +22,29 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
   /* background-color: yellow; */
+}
+
+::-webkit-scrollbar {
+  width: 8px;
+  
+}
+
+::-webkit-scrollbar-track {
+  background-color: transparent;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #264653;
+  border-radius: 10px;
+}
+
+
+.nav {
+  height: 15%;
+}
+
+.hero {
+  height: 85%;
 }
 
 .container {
